--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -129,7 +129,7 @@
 //     document.querySelectorAll(".marg_text")[a].classList.toggle("dec_show");
 // };
 
-// css링크 연결 불가 현상, 코드 간소화 실패해서 임시 방편 처리
+// css링크 연결 불가 현상, 코드 간소화 실패로 임시 처리
 document.getElementById("cb1").addEventListener("click", function(){
     document.getElementById("marg_text1").classList.toggle("dec_show");
 });
