--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -7,14 +7,15 @@
     <div class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
         <div class = "item" id = "timetable">
-            <form action="{% url 'mateapp:timetable' %}" method="POST" enctype="multipart/form-data">
-                {%csrf_token%}
-                <input type="file" name="timetable" id="timetable" accept="image/png">
-                <input type="submit" value="시간표 추가하기">
-            </form>
             {% if request.user.is_authenticated %}
                 {% if request.user.profile.timetable %}
-                <img src="{{ request.user.profile.timetable.url }}" style="width: 100%;"/>
+                <img src="{{ request.user.profile.timetable.url }}" style="width: 100%; height: 100%;"/>
+                {% else %}
+                <form action="{% url 'mateapp:timetable' %}" method="POST" enctype="multipart/form-data">
+                    {%csrf_token%}
+                    <input type="file" name="timetable" id="timetable" accept="image/png">
+                    <input type="submit" value="시간표 추가하기">
+                </form>
                 {% endif %}
             {% endif %}
         </div>
