--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -9,7 +9,7 @@
         <div class = "item" id = "timetable">
             {% if request.user.is_authenticated %}
                 {% if request.user.profile.timetable %}
-                <img src="{{ request.user.profile.timetable.url }}" style="width: 100%; height: 100%;"/>
+                <img src="{{ request.user.profile.timetable.url }}" style="width: 100%; height: 100%; border-radius: 15px;"/>
                 {% else %}
                 <form action="{% url 'mateapp:timetable' %}" method="POST" enctype="multipart/form-data">
                     {%csrf_token%}
