navbar hover및 정렬 2차

--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -512,15 +512,47 @@ span{
     height: 27.9px;
 } */
 
-.nav_icon {
-    border: 1px solid #5D7285;
+.navbar a {
+    text-decoration: none;
+}
+
+.nav_button {
+    /* border: 1px solid #5D7285; */
     border-radius: 12px;
     width: 180px;
     height: 40px;
     margin-left: 15px;
+    transition: all .5s;
 }
 
-.nav_icon:hover {
+.nav_button:hover {
+    background-color: #735BF2;
+}
+
+.nav_button span {
+    font-family: 'AppleSDGothicNeoB';
+    font-size: 15px;
+    color: #5D7285;
+    
+}
+
+.nav_button img {
+    width: 25px;
+    height: 25px;
+    padding-right: 15px;
+    padding-top: 7px;
+}
+
+.nav_button ul {
+    font-family: 'AppleSDGothicNeoM';
+    font-size: 15px;
+    color: #5D7285;
+    list-style: none;
+    line-height: 50px;
+    padding-left: 55px;
+}
+
+.current {
     background-color: #735BF2;
     color: white;
 }
@@ -532,6 +564,7 @@ span{
     border-radius: 10px;
     padding: 7px;
     margin: 30px 5px 30px 15px;
+    vertical-align: middle;
 }
 
 .nav_main span {
@@ -540,27 +573,14 @@ span{
     font-weight: 400;
     font-size: 24px;
     color: #735BF2;
+    vertical-align: middle;
 }
 
-.nav_icon a {
-    text-decoration: none;
+#nav_rep {
+    padding-left: 15px;
+    width: 165px;
 }
 
-.nav_icon span {
-    font-family: 'AppleSDGothicNeoB';
-    font-size: 15px;
-    color: #5D7285;
-}
-
-.nav_icon img {
-    width: 25px;
-    height: 25px;
-}
-
-.nav_icon ul {
-    font-family: 'AppleSDGothicNeoM';
-    font-size: 15px;
-    color: #5D7285;
-    list-style: none;
-    line-height: 50px;
+.nav_project {
+    padding-left: 15px;
 }
