0704 버튼 변경, 사소한 디자인 변경

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -38,7 +38,7 @@
             
         </div>
         <div class = "item2" id = "today">투데이
-            <a href="#" onclick="window.open('todolist','todolist','resizable=no width=600 height=500');return false" style="text-decoration-line: none;">+</a>
+            <a id = "plus" href="#" onclick="window.open('todolist','todolist','resizable=no width=600 height=500');return false" style="text-decoration-line: none;">+</a>
         </div>
 
         <div class = "item2" id = "today_date">
