--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -253,11 +253,28 @@ span{
 }
 
 #plus{
+    font-family:AppleSDGothicNeoM;
     display: inline-block; 
     font-size:larger; 
     vertical-align: middle;
     cursor: pointer;
+    background: #FFFFFF;
+    /* Gray Light */
+    
+    border: 1px solid #DDDDDD;
+    border-radius: 8px;
+    padding: 0;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    line-height: 30px;
+    margin-left: 8px;
 }
+
+#project_text{
+    line-height: 30px;
+}
+
 /*mainpage : 러닝메이트*/
 #runningmate{
     overflow-x:auto; white-space:nowrap;
@@ -385,7 +402,7 @@ span{
     height: 3vmin;
     border: 1px solid #DDDDDD;
     font-size: 1.6vmin;
-    line-height: 3.4vmin;
+    line-height: 2.9vmin;
     background-color: transparent;
     cursor: pointer;
     font-family: "AppleSDGothicNeoB" ;
