--- a/runningmate/runningmate/templates/shared/_navbar.html
+++ b/runningmate/runningmate/templates/shared/_navbar.html
@@ -1,33 +1,15 @@
 {% load static %}
 <!-- navbar -->
-<!-- <div class="wrap">
-    <a href="{% url 'mateapp:showmain' %}" style="text-decoration:none"><div class = "home_logo"><div id = "home_logo"></div>learningmate</div></a>
-
-    <ul class="nav">
-        <li><button class="nav-item" id="home"><a href="{% url 'mateapp:showmain' %}"><img src="{% static 'images/home.png' %}" class="home_img" /><span class="nav_text"> 대시보드</span></a></button></li>
-        <li><button class="nav-item" id="nav_calender"><a href="{% url 'mateapp:calendar' %}"><img src="{% static 'images/date_range.png' %}" class="calender_img" /><span class="nav_text"> 캘린더</span></a></button></li>
-        <li>
-            <div class="dropdown">
-                <button class="dropbtn"><img src="{% static 'images/Vector.png' %}" class="project_img" /><span class="nav_text"> 프로젝트</span></button>
-                <div class="dropdown-content">
-                    <button><li><a href="#">IT 서비스 관리</a></li></button><br>
-                    <button><li><a href="#">마케팅원론 04</a></li></button><br>
-                    <button><li><a href="#">조직행위 03</a></li></button>
-                </div>
-            </div>
-        </li>
-    </ul>
-</div> -->
 
 <div class="navbar">
     <div class="nav_main">
         <a href="{% url 'mateapp:showmain' %}"><img src="{% static 'images/logo.png' %}" class="nav_logo"/><span>learningmate</span></a>
     </div>
 
-    <a href="{% url 'mateapp:showmain' %}"><div class="nav_button" data-id="0" id="nav_rep"><img src="{% static 'images/home.png' %}" id="home_logo"/><span>대시보드</span></div></a>
-    <a href="{% url 'mateapp:calendar' %}"><div class="nav_button" data-id="1" id="nav_rep"><img src="{% static 'images/date_range.png' %}" id="calender_logo"/><span>캘린더</span></div></a>
-    <div class="nav_button" data-id="2">
-        <div class="nav_project"><img src="{% static 'images/Vector.png' %}" id="project_logo"/><span>프로젝트</span></div>
+    <a href="{% url 'mateapp:showmain' %}"><div class="nav_button" id="nav_rep"><img src="{% static 'images/home.png' %}" id="home_logo"/>대시보드</div></a>
+    <a href="{% url 'mateapp:calendar' %}"><div class="nav_button" id="nav_rep"><img src="{% static 'images/date_range.png' %}" id="calender_logo"/>캘린더</div></a>
+    <div class="nav_button">
+        <div class="nav_project"><img src="{% static 'images/Vector.png' %}" id="project_logo"/>프로젝트</div>
         <ul class="project_sub">
             <li>IT 서비스 관리</li>
             <li>마케팅원론 04</li>
@@ -37,12 +19,3 @@
         </ul>
     </div>
 </div>
-
-<script>
-    // document.querySelectorAll(".nav_button")[0].addEventListener("click", function(){
-    //     document.querySelectorAll(".nav_button")[0].classList.remove("current");
-    //     document.querySelectorAll(".nav_button")[1].classList.remove("current");
-    //     document.querySelectorAll(".nav_button")[2].classList.remove("current");
-    //     document.querySelectorAll(".nav_button")[0].classList.add("current");
-    // });
-</script>
