0706 프로젝트 페이지 구성

--- a/runningmate/runningmate/templates/shared/_navbar.html
+++ b/runningmate/runningmate/templates/shared/_navbar.html
@@ -11,7 +11,7 @@
     <div class="nav_button">
         <div class="nav_project"><img src="{% static 'images/Vector.png' %}" id="project_logo"/>프로젝트</div>
         <ul class="project_sub">
-            <li>IT 서비스 관리</li>
+            <a href = "{% url 'mateapp:project' %}"><li id = "project">IT 서비스 관리</li></a>
             <li>마케팅원론 04</li>
             <li>조직행위 03</li>
             <li>파이썬과 경영 01</li>
