--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -95,14 +95,14 @@
         </div>
 
 
-
+<!-- 프로젝트 관리 -->
         <div class = "item" id = "project_text">프로젝트 관리
             <section id = "plus" >+</section>
         </div>
 
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
-                <h6>2022.03.12~2022.06.21</h6>
+                <h6>2022.03.12~ {{addproject.Project.startday.0}}</h6>
                 <h2> IT 서비스 관리</h2>
                 <h3> 인시던트 관리 프레임워크 기획</h3>
             </div>
