--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -1,120 +1,117 @@
+#rec4{
+    position: absolute;
+    width: 80%;
+    min-height: 90%;
+    left: 17%;
+    top: 4%;
+    bottom: 4%;
+    background: #F8F9FF;
+    border-radius: 30px;
+}
 
 /*캘린더 테이블 배치*/
 .container2{
-    display:grid;
+    display: grid;
     grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-rows: 1fr 5fr 1fr 2.5fr 1.5fr 1.5fr 1.5fr 15px;
     height: 100%;
     row-gap: 10px;
     column-gap: 20px;
-    font-family: AppleSDGothicNeoB;
+    font-family: 'AppleSDGothicNeoB';
     font-weight: 500;
     font-size: 2.3vmin;
-
 }
 .item2:nth-child(1){
     grid-column: 1 / 4;
-    grid-row : 1 / 2;
+    grid-row: 1 / 2;
     margin-top: 30px;
-    margin-left:2em;
+    margin-left: 2em;
 }
 
 .item2:nth-child(2){
     grid-column: 1 / 4;
-    grid-row : 2 / 3;
+    grid-row: 2 / 3;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-left:20px;
+    margin-left: 20px;
     margin-right: 2em;
-
 }
 
 .item2:nth-child(3){
     grid-column: 1 / 2;
-    grid-row : 3 / 4;
+    grid-row: 3 / 4;
     margin-top: 20px;
-    margin-left:2em;
+    margin-left: 2em;
 }
 
 .item2:nth-child(4){
     grid-column: 1 / 2;
-    grid-row : 4 / 7;
+    grid-row: 4 / 7;
     background-color: #FFFFFF;
     border-radius: 20px;
-    margin-left:2em;
-
+    margin-left: 2em;
 }
 
 .item2:nth-child(5){
     grid-column: 1 / 2;
-    grid-row : 7 / 8;
+    grid-row: 7 / 8;
     background-color: #FFFFFF;
     border-radius: 20px;
     margin-left:2em;
-
 }
 
 .item2:nth-child(6){
-    grid-column: 2 /4;
-    grid-row : 3/4;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
     margin-top: 20px;
-
 }
 
 .item2:nth-child(7){
-    grid-column: 2/ 3;
-    grid-row : 4 / 5;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
     background-color: #FFFFFF;
     border-radius: 20px;
-
 }
-
 
 .item2:nth-child(8){
     grid-column: 2 / 3;
-    grid-row : 5/6;
+    grid-row: 5 / 6;
     background-color: #FFFFFF;
     border-radius: 20px;
-
-
 }
-
 
 .item2:nth-child(9){
-    grid-column:2/3;
-    grid-row : 6/7;
+    grid-column: 2 / 3;
+    grid-row: 6 / 7;
     background-color: #FFFFFF;
     border-radius: 20px;
-
-
 }
+
 .item2:nth-child(10){
-    grid-column: 2/3;
-    grid-row : 7/8;
+    grid-column: 2 / 3;
+    grid-row: 7 / 8;
     background-color: #FFFFFF;
     border-radius: 20px;
-
 }
 
 .item2:nth-child(11){
-    grid-column: 3/4;
-    grid-row : 4/8;
+    grid-column: 3 / 4;
+    grid-row : 4 / 8;
     background-color: #FFFFFF;
     border-radius: 20px;
     margin-right: 2em;
-
-
 }
+
 .item2:nth-child(12){
-    grid-column: 1/4;
-    grid-row : 8/9;
+    grid-column: 1 / 4;
+    grid-row : 8 / 9;
 }
 
 
 /*캘린더 페이지 캘린더*/
 
 .cal_main2{/*캘린더 페이지 캘린더*/
-    font-family: AppleSDGothicNeoB;
+    font-family: 'AppleSDGothicNeoB';
     font-size: 1.7vmin;
 }
 
@@ -240,7 +237,7 @@ table {
 }
 
 #plus{
-    font-family:AppleSDGothicNeoM;
+    font-family:'AppleSDGothicNeoM';
     display: inline-block; 
     font-size:larger; 
     vertical-align: middle;
