--- a/runningmate/runningmate/templates/base.html
+++ b/runningmate/runningmate/templates/base.html
@@ -8,6 +8,7 @@
         <title>RunningMate</title>
         <link rel = "stylesheet" type="text/css" href = "{% static 'css/style.css' %}?after">
         <link rel = "stylesheet" type="text/css" href = "{% static 'css/calender.css' %}?after">
+        <link rel = "stylesheet" type="text/css" href = "{% static 'css/gantt.css' %}?after">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </head>
     <body>
