--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -1,86 +1,90 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
-{% block content %} 
-
-<div id = "rec3">
-    <div class = "container2">
-        <div class = "item2" id = "chart_text">러닝차트</div>
-        <div class = "item2" id = "chart">
-            
-        </div>
-        <div class = "item2" id = "calendar2_text">캘린더</div>
-        <div class = "item2" id = "calendar2">
-            <div class="calendar">
-                <div class="cal_header2">
-                    <button class="nav-btn go-prev" onclick="prevMonth()">&lt;</button>
-                    <div class="year-month" ></div>
-                    <button class="nav-btn go-next" onclick="nextMonth()">&gt;</button>
-                    <button class="nav-btn go-today" onclick="goToday()">Today</button>
-                </div>
-                
-                <div class="cal_main2">
-                    <div class="days">
-                        <div class="day">Sun</div>
-                        <div class="day">Mon</div>
-                        <div class="day">Tue</div>
-                        <div class="day">Wed</div>
-                        <div class="day">Thu</div>
-                        <div class="day">Fri</div>
-                        <div class="day">Sat</div>
-                    </div>
-                    <div class="dates"></div>
-                </div>
-            </div>
-            <script src="{% static 'js/calendar.js'%}"></script>
-        </div>
-        <div class = "item2" id = "calendar2_2">
-            
-        </div>
-        <div class = "item2" id = "today">투데이
-            <a id = "plus" href="#" onclick="window.open('todo_new','todo_new','resizable=no, width=600, height=500');return false" style="text-decoration-line: none;">+</a>
+<div id="rec3">
+  <div class="container2">
+    <div class="item2" id="chart_text">러닝차트</div>
+    <div class="item2" id="chart"></div>
+    <div class="item2" id="calendar2_text">캘린더</div>
+    <div class="item2" id="calendar2">
+      <div class="calendar">
+        <div class="cal_header2">
+          <button class="nav-btn go-prev" onclick="prevMonth()">&lt;</button>
+          <div class="year-month"></div>
+          <button class="nav-btn go-next" onclick="nextMonth()">&gt;</button>
+          <button class="nav-btn go-today" onclick="goToday()">Today</button>
         </div>
 
-        <div class = "item2" id = "today_date">
-            
+        <div class="cal_main2">
+          <div class="days">
+            <div class="day">Sun</div>
+            <div class="day">Mon</div>
+            <div class="day">Tue</div>
+            <div class="day">Wed</div>
+            <div class="day">Thu</div>
+            <div class="day">Fri</div>
+            <div class="day">Sat</div>
+          </div>
+          <div class="dates"></div>
         </div>
+      </div>
+      <script src="{% static 'js/calendar.js'%}"></script>
+    </div>
+    <div class="item2" id="calendar2_2"></div>
+    <div class="item2" id="today">
+      투데이
+      <a
+        id="plus"
+        href="#"
+        onclick="window.open('todo_new','todo_new','resizable=no, width=600, height=500');return false"
+        style="text-decoration-line: none"
+        >+</a
+      >
+    </div>
 
-        <!-- 디데이 -->
-        <div class = "item2" id = "dday1">
-            <section class = "subject_name" id = "dday1_subject"></section>
-            <section  class = "meeting_subject" id = "dday1_meeting"></section>
-            <section  class = "count_dday" id = "dday1_dday"></section>
-            <script src="{% static 'js/dday.js'%}"></script>
-        </div>
-        <div class = "item2" id = "dday2">
-            <section  class = "subject_name" id = "dday2_subject"></section>
-            <section  class = "meeting_subject" id = "dday2_meeting"></section>
-            <section  class = "count_dday" id = "dday2_dday"></section>
-            <script src="{% static 'js/dday.js'%}"></script>
-        </div>
-        <div class = "item2" id = "dday3">
-            <section  class = "subject_name" id = "dday3_subject"></section>
-            <section  class = "meeting_subject" id = "dday3_meeting"></section>
-            <section  class = "count_dday" id = "dday3_dday"></section>
-            <script src="{% static 'js/dday.js'%}"></script>
-        </div>
+    <div class="item2" id="today_date"></div>
 
-        <!-- 체크리스트 -->
-        <div class = "item2" id = "marg_bottom">
-        {% for todo in todos %}
-            <div class="detail_1">
-                <p class="syn_1">{{ todo.title }}</p>
-                <table class="tb1">
-                    
-                    <tr>
-                        <td><input type="checkbox" class="cb" id="cb1"> <span class="marg_text" id="marg_text1" data-id="0">{{ todo.1.content }}</span></td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" class="cb" id="cb2"> <span class="marg_text" id="marg_text2" data-id="1">인시던트 관리 에세이 작성</span></td>
-                    </tr>
-                </table>
-            </div>
-        <!--
+    <!-- 디데이 -->
+    <div class="item2" id="dday1">
+      <section class="subject_name" id="dday1_subject"></section>
+      <section class="meeting_subject" id="dday1_meeting"></section>
+      <section class="count_dday" id="dday1_dday"></section>
+      <script src="{% static 'js/dday.js'%}"></script>
+    </div>
+    <div class="item2" id="dday2">
+      <section class="subject_name" id="dday2_subject"></section>
+      <section class="meeting_subject" id="dday2_meeting"></section>
+      <section class="count_dday" id="dday2_dday"></section>
+      <script src="{% static 'js/dday.js'%}"></script>
+    </div>
+    <div class="item2" id="dday3">
+      <section class="subject_name" id="dday3_subject"></section>
+      <section class="meeting_subject" id="dday3_meeting"></section>
+      <section class="count_dday" id="dday3_dday"></section>
+      <script src="{% static 'js/dday.js'%}"></script>
+    </div>
+{{new_todocomment.0}}
+    <!-- 체크리스트 -->
+    <div class="item2" id="marg_bottom">
+      {% for todo in todos %}
+      <div class="detail_1">
+        <p class="syn_1">{{ todotitle.title }}</p>
+        <table class="tb1">
+          {% for todocomment in new_todocomment %}
+          <tr>
+            <td>
+              <input type="checkbox" class="cb" id="cb1" />
+              <span class="marg_text" id="marg_text1" data-id="0">{{todocomment.content}}</span>
+            </td>
+          </tr>
+          <!-- <tr>
+                        <td><input type="checkbox" class="cb" id="cb2"> <span class="marg_text" id="marg_text2" data-id="1"></span></td>
+                    </tr> -->
+            {% endfor %}
+        </table>
+      </div>
+      {% endfor %}
+
+      <!--
             <div class="detail_2">
                 <p class="syn_2">조직행위 03</p>
                 <table class="tb2">
@@ -118,44 +122,42 @@
                 </table>
             </div>
         -->
-        {% endfor %}
-        </div>
     </div>
+  </div>
 </div>
 
 <script>
-// css링크 연결 불가 현상, 코드 간소화 실패로 임시 처리
-document.getElementById("cb1").addEventListener("click", function(){
+  // css링크 연결 불가 현상, 코드 간소화 실패로 임시 처리
+  document.getElementById("cb1").addEventListener("click", function () {
     document.getElementById("marg_text1").classList.toggle("dec_show");
-});
-document.getElementById("cb2").addEventListener("click", function(){
+  });
+  document.getElementById("cb2").addEventListener("click", function () {
     document.getElementById("marg_text2").classList.toggle("dec_show");
-});
-document.getElementById("cb3").addEventListener("click", function(){
+  });
+  document.getElementById("cb3").addEventListener("click", function () {
     document.getElementById("marg_text3").classList.toggle("dec_show");
-});
-document.getElementById("cb4").addEventListener("click", function(){
+  });
+  document.getElementById("cb4").addEventListener("click", function () {
     document.getElementById("marg_text4").classList.toggle("dec_show");
-});
-document.getElementById("cb5").addEventListener("click", function(){
+  });
+  document.getElementById("cb5").addEventListener("click", function () {
     document.getElementById("marg_text5").classList.toggle("dec_show");
-});
-document.getElementById("cb6").addEventListener("click", function(){
+  });
+  document.getElementById("cb6").addEventListener("click", function () {
     document.getElementById("marg_text6").classList.toggle("dec_show");
-});
-document.getElementById("cb7").addEventListener("click", function(){
+  });
+  document.getElementById("cb7").addEventListener("click", function () {
     document.getElementById("marg_text7").classList.toggle("dec_show");
-});
-document.getElementById("cb8").addEventListener("click", function(){
+  });
+  document.getElementById("cb8").addEventListener("click", function () {
     document.getElementById("marg_text8").classList.toggle("dec_show");
-});
-document.getElementById("cb9").addEventListener("click", function(){
+  });
+  document.getElementById("cb9").addEventListener("click", function () {
     document.getElementById("marg_text9").classList.toggle("dec_show");
-});
+  });
 
-// document.querySelectorAll(".cb")[0].addEventListener("click", function(){
-//     document.querySelectorAll(".marg_text")[0].classList.togle("dec_show");
-// }); 안되는 이유 파악 필요
-
+  // document.querySelectorAll(".cb")[0].addEventListener("click", function(){
+  //     document.querySelectorAll(".marg_text")[0].classList.togle("dec_show");
+  // }); 안되는 이유 파악 필요
 </script>
 {% endblock %}
