0707 메인페이지 파일업로드 버튼 디자인 변경

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -13,8 +13,8 @@
                 {% else %}
                 <form action="{% url 'mateapp:timetable' %}" method="POST" enctype="multipart/form-data">
                     {%csrf_token%}
-                    <input type="file" name="timetable" id="timetable" accept="image/png">
-                    <input type="submit" value="시간표 추가하기">
+                    <input type="file" name="timetable" id="timetable" accept="image/png" class="custom-file-input">
+                    <input type="submit" value="시간표 추가하기" id = "timetable_submit">
                 </form>
                 {% endif %}
             {% endif %}
