--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -539,3 +539,63 @@ span{
     color: #5D7285;
     text-decoration: none;
 }
+
+/*시간표*/
+input{
+    font-family: AppleSDGothicNeoB;
+}
+
+.custom-file-input {
+    color: transparent;
+    width: 110px;
+    padding: 0;
+    margin: 0;
+
+}
+.custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+
+}
+
+.custom-file-input::before {
+    content: '파일선택';
+    background-color: #735BF2;;
+    color: whitesmoke;
+    display: inline-block;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 15px;
+    width: 110px;
+    text-align: center;
+    height: 50px;
+    vertical-align: middle;
+    line-height: 50px;
+
+}
+
+#timetable_submit{
+    background-color: #735BF2;;
+    color: whitesmoke;
+    display: inline-block;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 15px;
+    width: 110px;
+    text-align: center;
+    height: 50px;
+    text-align: center;
+    border: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+
+#timetable form{
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
