--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -558,18 +558,18 @@ input{
 }
 
 .custom-file-input::before {
-    content: '파일선택';
+    content: '파일 불러오기';
     background-color: #735BF2;;
     color: whitesmoke;
     display: inline-block;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
     font-size: 15px;
     width: 110px;
     text-align: center;
-    height: 50px;
+    height: 40px;
     vertical-align: middle;
-    line-height: 50px;
+    line-height: 40px;
 
 }
 
@@ -577,12 +577,12 @@ input{
     background-color: #735BF2;;
     color: whitesmoke;
     display: inline-block;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
     font-size: 15px;
     width: 110px;
     text-align: center;
-    height: 50px;
+    height: 40px;
     text-align: center;
     border: none;
     margin: 0;
@@ -598,4 +598,11 @@ input{
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    
+}
+
+#upload_text{
+    font-family: AppleSDGothicNeoM;
+    margin-bottom: 10px;
+    color: #5D7285;
 }
