--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -1,9 +1,47 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
+<link rel = "stylesheet" type="text/css" href = "{% static 'css/gantt.css' %}?after">
+
 <div id="rec3">
   <div class="container2">
     <div class="item2" id="chart_text">러닝차트</div>
-    <div class="item2" id="chart"></div>
+
+    <div class="item2" id="gantt">
+      <div class="chart-axis">
+        <ul class="chart-subject">
+            <li style="color: #50cfbc;"><img src="{% static 'images/Oval_mint.png' %}" class="Oval"/> IT 서비스 관리</li>
+            <li style="color: #fe7782;"><img src="{% static 'images/Oval_red.png' %}" class="Oval"/> 마케팅 원론 04</li>
+            <li style="color: #45bfff;"><img src="{% static 'images/Oval_blue.png' %}" class="Oval"/> 조직행위 03</li>
+            <li style="color: #ffbc54;"><img src="{% static 'images/Oval_yel.png' %}" class="Oval"/> 파이썬과 경영 01</li>
+            <li style="color: #735bf2;"><img src="{% static 'images/Oval_pur.png' %}" class="Oval"/> 사물인터넷 기초</li>
+        </ul>
+      </div>
+      <div class="chart-wrapper">
+        <ul class="chart-values">
+          <li>mon</li>
+          <li>tue</li>
+          <li>wed</li>
+          <li>thu</li>
+          <li>fri</li>
+          <li>sat</li>
+          <li>sun</li>
+        </ul>
+
+        <ul class="chart-bars">
+          <li data-duration="tue½-thu" data-color="#50cfbc">주제선정</li>
+          <li data-duration="mon-wed" data-color="#fe7782">팀 빌딩</li>
+          <!-- <li data-duration="thu½-fri" data-color="#fe7782">가입 선정</li> -->
+          <li data-duration="thu-sun" data-color="#45bfff">기업의 커뮤니케이션 우수 사례 조사</li>
+          <li data-duration="wed½-sat" data-color="#ffbc54">문자열 메소드 암기</li>
+          <li data-duration="fri-sat½" data-color="#735bf2">프로젝트 기획서 초안 작성</li>
+          <!-- <li data-duration="wed-wed" data-color="#색추가">Task</li>
+          <li data-duration="thu-fri½" data-color="#색추가">Task</li>
+          <li data-duration="mon½-wed½" data-color="#색추가">Task</li>
+          <li data-duration="fri-sat" data-color="#색추가">Task</li> -->
+        </ul>
+      </div>
+      <script src="{% static 'js/gantt.js'%}"></script>
+    </div>
     <div class="item2" id="calendar2_text">캘린더</div>
     <div class="item2" id="calendar2">
       <div class="calendar">
