--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -3,6 +3,43 @@
 
 {% block content %} 
 
+<style>
+    /* navbar 현재 페이지 표시 */
+    #btn1 {
+        background-color: #735BF2;
+        color: white;
+    }
+
+    #home_logo {
+    width: 40px;
+    height: 40px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/homeOn.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #calender_logo {
+    width: 40px;
+    height: 40px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/calender.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #project_logo {
+    width: 40px;
+    height: 40px;
+    background-image: url("{% static 'images/project.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+</style>
+
 <div id = "rec3">
     <div class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
