--- a/runningmate/mateapp/templates/mateapp/project.html
+++ b/runningmate/mateapp/templates/mateapp/project.html
@@ -3,6 +3,43 @@
 
 {% block content %} 
 <link rel = "stylesheet" type="text/css" href = "{% static 'css/project.css' %}?after">
+
+<style>
+    /* navbar 현재 페이지 표시 */
+    #btn3 {
+        background-color: #735BF2;
+        color: white;
+    }
+
+    #home_logo {
+    width: 40px;
+    height: 40px;
+    background-image: url("{% static 'images/home.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #calender_logo {
+    width: 40px;
+    height: 40px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/calender.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #project_logo {
+    width: 40px;
+    height: 40px;
+    background-image: url("{% static 'images/projectOn.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+</style>
+
 <div id = "rec3">
     <div class = "container3">
         <div class = "item3" id = "pro_project_text">프로젝트</div>
