--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -3,45 +3,8 @@
 
 {% block content %} 
 
-<style>
-    /* navbar 현재 페이지 표시 */
-    #btn1 {
-        background-color: #735BF2;
-        color: white;
-    }
-
-    #home_logo {
-    width: 40px;
-    height: 40px;
-    /* background: #735BF2; */
-    background-image: url("{% static 'images/homeOn.png' %}");
-    background-repeat: no-repeat;
-    display: inline-block;
-    padding-right: 10px;
-    }
-
-    #calender_logo {
-    width: 40px;
-    height: 40px;
-    /* background: #735BF2; */
-    background-image: url("{% static 'images/calender.png' %}");
-    background-repeat: no-repeat;
-    display: inline-block;
-    padding-right: 10px;
-    }
-
-    #project_logo {
-    width: 40px;
-    height: 40px;
-    background-image: url("{% static 'images/project.png' %}");
-    background-repeat: no-repeat;
-    display: inline-block;
-    padding-right: 10px;
-    }
-</style>
-
 <div id = "rec3">
-    <div class = "container">
+    <class class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
         <div class = "item" id = "timetable">
             {% if request.user.is_authenticated %}
@@ -137,9 +100,9 @@
 
 <!-- 프로젝트 관리 -->
         <div class = "item" id = "project_text">프로젝트 관리
-            <section id = "plus" >+</section>
+            <section id = "plus" ><a href="{% url 'addproject:newproject' %}">+</a></section>
         </div>
-
+<!-- 
         <div class = "item" id = "project">
             <div class="scroll--element" id = "subject1">
                 <h6>2022.03.12~ {{addproject.Project.startday.0}}</h6>
@@ -166,9 +129,22 @@
                 <h2> 사물인터넷 기초</h2>
                 <h3> 프로젝트 기획서 초찬 작성</h3>
             </div>
+        </div> -->
+        <div class = "item" id = "project">
+
+            {% for project in projects %}
+            <div class = "item" id = "project">
+                <div class="scroll--element" id = "subject1">
+                        <h2>{{project.title}}</h2>
+                        <h6>{{project.startday}}~{{project.endday}}</h6>
+                        <h3>{{project.summary}}</h3>
+                </div>
+            </div>
+            {% endfor %}
 
         </div>
-    </div>
+
+    </class>
 </div>
 <a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}"/></a>
 
