--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -2,9 +2,44 @@
 {% load static %}
 
 {% block content %} 
+<style>
+    /* navbar 현재 페이지 표시 */
+    #btn1 {
+        background-color: #735BF2;
+        color: white;
+    }
 
+    #home_logo {
+    width: 40px;
+    height: 40px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/homeOn.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #calender_logo {
+    width: 40px;
+    height: 40px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/calender.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+
+    #project_logo {
+    width: 40px;
+    height: 40px;
+    background-image: url("{% static 'images/project.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-right: 10px;
+    }
+</style>
 <div id = "rec3">
-    <class class = "container">
+    <div class = "container">
         <div class = "item" id = "timetable_text">시간표</div>
         <div class = "item" id = "timetable">
             {% if request.user.is_authenticated %}
@@ -144,7 +179,7 @@
 
         </div>
 
-    </class>
+    </div>
 </div>
 <a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}"/></a>
 
