--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -61,13 +61,13 @@
         {% else %}
         <div class = "item" id = "schedule_1">
             {{calendar.0.title}}<br>
-            {{calendar.0.datetime}}<br>
+            {{calendar.0.startday}}~{{calendar.0.endday}}<br>
             {{calendar.0.place}}<br>
         </div>
         
         <div class = "item" id = "schedule_2">
             {{calendar.1.title}}<br>
-            {{calendar.1.datetime}}<br>
+            {{calendar.1.startday}}~{{calendar.1.endday}}<br>
             {{calendar.1.place}}
 
         </div>
