todo랑 calendar 연결

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -46,7 +46,7 @@
     <div class="item2" id="gantt">
       <div class="chart-axis">
         <ul class="chart-subject">
-            <li style="color: 'calendar.0.color';"><img src="{% static 'images/Oval_mint.png' %}" class="Oval"/> IT 서비스 관리</li>
+            <li style="color: #50cfbc;"><img src="{% static 'images/Oval_mint.png' %}" class="Oval"/> {{calendar.title}}</li>
             <li style="color: #fe7782;"><img src="{% static 'images/Oval_red.png' %}" class="Oval"/> 마케팅 원론 04</li>
             <li style="color: #45bfff;"><img src="{% static 'images/Oval_blue.png' %}" class="Oval"/> 조직행위 03</li>
             <li style="color: #ffbc54;"><img src="{% static 'images/Oval_yel.png' %}" class="Oval"/> 파이썬과 경영 01</li>
