--- a/runningmate/runningmate/templates/shared/_navbar.html
+++ b/runningmate/runningmate/templates/shared/_navbar.html
@@ -7,9 +7,9 @@
     </div>
 
     <div class="button_wrap">
-        <a href="{% url 'mateapp:showmain' %}"><div class="nav_button" id="btn1"><div id="home_logo"></div> 대시보드</div></a>
-        <a href="{% url 'mateapp:calendar' %}"><div class="nav_button" id="btn2"><div id="calender_logo"></div> 캘린더</div></a>
-        <a href="#"><div class="nav_button" id="btn3"><div id="project_logo"></div> 프로젝트</div></a>
+        <a href="{% url 'mateapp:showmain' %}"><div class="nav_button" id="btn1"><div id="home_logo"></div> <span>대시보드</span></div></a>
+        <a href="{% url 'mateapp:calendar' %}"><div class="nav_button" id="btn2"><div id="calender_logo"></div> <span>캘린더</span></div></a>
+        <a href="#"><div class="nav_button" id="btn3"><div id="project_logo"></div> <span>프로젝트</span></div></a>
         <ul class="project_wrap">
             <a href = "{% url 'mateapp:project_name' %}"><li id = "project">IT 서비스 관리</li></a>
             <li>마케팅원론 04</li>
@@ -19,3 +19,7 @@
         </ul>
     </div>
 </div>
+
+<script>
+    
+</script>
