--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -4,38 +4,50 @@
 
 <style>
   /* navbar 현재 페이지 표시 */
+  .nav_button {
+    padding: initial;
+    margin: initial;
+    box-sizing: initial;
+    padding-left: 10px;
+    margin-left: 20px;
+    width: 257px;
+  }
+
+  .nav_button span {
+    margin-left: 10px;
+  }
+
   #btn2 {
-      background-color: #735BF2;
-      color: white;
+    background-color: #735BF2;
+    color: white;
   }
 
   #home_logo {
-  width: 40px;
-  height: 40px;
-  background-image: url("{% static 'images/home.png' %}");
-  background-repeat: no-repeat;
-  display: inline-block;
-  padding-right: 10px;
+    width: 30px;
+    height: 30px;
+    background-image: url("{% static 'images/home.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-left: 10px;
   }
 
-
   #calender_logo {
-  width: 40px;
-  height: 40px;
-  /* background: #735BF2; */
-  background-image: url("{% static 'images/calenderOn.png' %}");
-  background-repeat: no-repeat;
-  display: inline-block;
-  padding-right: 10px;
+    width: 30px;
+    height: 30px;
+    /* background: #735BF2; */
+    background-image: url("{% static 'images/calenderOn.png' %}");
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-left: 10px;
   }
 
   #project_logo {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-image: url("{% static 'images/project.png' %}");
     background-repeat: no-repeat;
     display: inline-block;
-    padding-right: 10px;
+    margin-left: 10px;
     }
 </style>
 
