프로젝트 관리 입력폼 css 작성

--- a/runningmate/runningmate/static/css/login.css
+++ b/runningmate/runningmate/static/css/login.css
@@ -94,8 +94,21 @@ html, body{
     text-align: center;
     height: 100%;
     width: 100%;
+    font-size: 30px;
     background-color: #ECF0FF;
     font-family:"AppleSDGothicNeoM";
+}
+
+.logout button {
+    width: 350px;
+    height: 45px;
+    font-family: "AppleSDGothicNeoM";
+    background-color: #735BF2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
 }
 
 .social_login{
